# tp_test

./: Dockerfile  README.md  expected-ci.drawio  init-env.sh  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py  predict.py
app/templates/: logactivity.html
epsi-paris-dete933-water-2025-i2/: pyproject.toml
epsi-paris-dete933-water-2025-i2/app/: __init__.py  main.py  schema.sql
epsi-paris-dete933-water-2025-i2/app/templates/: useractivity.html
epsi-paris-dete933-water-2025-i2/tests/: test_integration.py
tests/: test_integration_summary.py  test_predict_expected.py  test_unit.py
tests/integration/: test_integration.py
tests/unit/: test_predict_expected.py  test_unit.py
